--- a/document/模块引脚说明.md
+++ b/document/模块引脚说明.md
@@ -75,8 +75,8 @@
 | 25     | GND      |                                                              |      |
 | 27     | PA12     | TIM1_ETR, HRTIM_CHD2,LPUART1_RTS/LPUART1_DE,SPI2_SCK/I2S2_CK, UART4_TX,USART1_RTS/USART1_DE,SAI2_FS_B, FDCAN1_TX,OTG_FS_DP, LCD_R5 |      |
 | 29     | PE4      | TRACED1, SAI1_D2,DFSDM1_DATIN3, TIM15_CH1N,SPI4_NSS, SAI1_FS_A,SAI4_FS_A, SAI4_D2, FMC_A20,DCMI_D4, LCD_B0 |      |
-| 31     | PE5      | TRACED2, SAI1_CK2,DFSDM1_CKIN3, TIM15_CH1,SPI4_MISO, SAI1_SCK_A,SAI4_SCK_A, SAI4_CK2,FMC_A21, DCMI_D6, LCD_G0, |      |
-| 33     | PE6      | TRACED3, TIM1_BKIN2,SAI1_D1, TIM15_CH2,SPI4_MOSI, SAI1_SD_A,SAI4_SD_A, SAI4_D1,SAI2_MCLK_B,TIM1_BKIN2_COMP12,FMC_A22, DCMI_D7, LCD_G1, |      |
+| 31     | PE5      | TRACED2, SAI1_CK2,DFSDM1_CKIN3, TIM15_CH1,SPI4_MISO, SAI1_SCK_A,SAI4_SCK_A, SAI4_CK2,FMC_A21, DCMI_D6, LCD_G0, | SPI4 |
+| 33     | PE6      | TRACED3, TIM1_BKIN2,SAI1_D1, TIM15_CH2,SPI4_MOSI, SAI1_SD_A,SAI4_SD_A, SAI4_D1,SAI2_MCLK_B,TIM1_BKIN2_COMP12,FMC_A22, DCMI_D7, LCD_G1, | SPI4 |
 | 35     | PH2      | LPTIM1_IN2,QUADSPI_BK2_IO0,SAI2_SCK_B, ETH_MII_CRS,FMC_SDCKE0, LCD_R0 |      |
 | 37     | PB1      | TIM1_CH3N, TIM3_CH4,TIM8_CH3N, DFSDM1_DATIN1,LCD_R6, OTG_HS_ULPI_D2,LCD_R6, OTG_HS_ULPI_D2 |      |
 | 39     | GND      |                                                              |      |
@@ -100,9 +100,24 @@
 | 26     | PA3      | TIM2_CH4, TIM5_CH4,LPTIM5_OUT, TIM15_CH2,USART2_RX, LCD_B2,OTG_HS_ULPI_D0,OTG_HS_ULPI_D0, |      |
 | 28     | PA11     | TIM1_CH4, HRTIM_CHD1,LPUART1_CTS,SPI2_NSS/I2S2_WS, UART4_RX,USART1_CTS/USART1_NSS,FDCAN1_RX, OTG_FS_DM,LCD_R4 |      |
 | 30     | GND      |                                                              |      |
-| 32     | PE2      | TRACECLK, SAI1_CK1,SPI4_SCK, SAI1_MCLK_A,SAI4_MCLK_A,QUADSPI_BK1_IO2, SAI4_CK1,ETH_MII_TXD3, FMC_A23 |      |
+| 32     | PE2      | TRACECLK, SAI1_CK1,SPI4_SCK, SAI1_MCLK_A,SAI4_MCLK_A,QUADSPI_BK1_IO2, SAI4_CK1,ETH_MII_TXD3, FMC_A23 | SPI4 |
 | 34     | GND      |                                                              |      |
 | 36     | PH3      | QUADSPI_BK2_IO1,SAI2_MCLK_B, ETH_MII_COL,FMC_SDNE0, LCD_R1   |      |
 | 38     | PB0      | TIM1_CH2N, TIM3_CH3,TIM8_CH2N, DFSDM1_CKOUT,UART4_CTS, LCD_R3,OTG_HS_ULPI_D1,ETH_MII_RXD2, LCD_G1 |      |
 | 40     | PB2      | RTC_OUT, SAI1_D1,DFSDM1_CKIN1, SAI1_SD_A,SPI3_MOSI/I2S3_SDO,SAI4_SD_A, QUADSPI_CLK,SAI4_D1, EVENTOUT |      |
 
+## 已用引脚
+
+-   LD3320
+
+    PE2，PE5，PE6  -->SPI4
+
+    -->LD3320_CS
+
+    -->LD3320_IRQ
+
+    -->LD3320_WR
+
+    -->LD3320_RST
+
+    
