更新语音识别，cpu温度采集

--- a/document/模块引脚说明.md
+++ b/document/模块引脚说明.md
@@ -58,28 +58,28 @@
 
 #### 左列
 
-| 引脚号 | 引脚名称 | 功能                                                         | 注释 |
-| ------ | -------- | ------------------------------------------------------------ | ---- |
-| 1      | 3.3V     |                                                              |      |
-| 3      | PG11     | LPTIM1_IN2, HRTIM_EEV4,SPI1_SCK/I2S1_CK,SPDIFRX1_IN1, SDMMC2_D2,ETH_MII_TX_EN/ETH_RMII_TX_EN, DCMI_D3, LCD_B3 |      |
-| 5      | PG13     | TRACED0, LPTIM1_OUT,HRTIM_EEV10, SPI6_SCK,USART6_CTS/USART6_NSS,ETH_MII_TXD0/ETH_RMII_TXD0,FMC_A24, LCD_R0 |      |
-| 7      | PB9      | TIM17_CH1, TIM4_CH4,DFSDM1_DATIN7, I2C1_SDA,SPI2_NSS/I2S2_WS, I2C4_SDA,SDMMC1_CDIR, UART4_TX,FDCAN1_TX, SDMMC2_D5,I2C4_SMBA, SDMMC1_D5,DCMI_D7, LCD_B7 |      |
-| 9      | GND      |                                                              |      |
-| 11     | PC2_C    | CDSLEEP, DFSDM1_CKIN1,SPI2_MISO/I2S2_SDI,DFSDM1_CKOUT,OTG_HS_ULPI_DIR,ETH_MII_TXD2, FMC_SDNE0 |      |
-| 13     | PC3_C    | CSLEEP, DFSDM1_DATIN1,SPI2_MOSI/I2S2_SDO,OTG_HS_ULPI_NXT,ETH_MII_TX_CLK,FMC_SDCKE0 |      |
-| 15     | PA0_C    | TIM2_CH1/TIM2_ETR,TIM5_CH1, TIM8_ETR,TIM15_BKIN,USART2_CTS/USART2_NSS,UART4_TX, SDMMC2_CMD,SAI2_SD_B, ETH_MII_CRS |      |
-| 17     | 3.3V     |                                                              |      |
-| 19     | PC5      | SAI1_D3, DFSDM1_DATIN2,SPDIFRX1_IN4, SAI4_D3,ETH_MII_RXD1/ETH_RMII_RXD1, FMC_SDCKE0, COMP1_OUT |      |
-| 21     | PA7      | TIM1_CH1N, TIM3_CH2,TIM8_CH1N,SPI1_MOSI/I2S1_SDO,SPI6_MOSI, TIM14_CH1,ETH_MII_RX_DV/ETH_RMII_CRS_DV, FMC_SDNWE, EVENTOUT |      |
-| 23     | PA6      | TIM1_BKIN, TIM3_CH1,TIM8_BKIN,SPI1_MISO/I2S1_SDI,SPI6_MISO, TIM13_CH1,TIM8_BKIN_COMP12,MDIOS_MDC,TIM1_BKIN_COMP12,DCMI_PIXCLK, LCD_G2 |      |
-| 25     | GND      |                                                              |      |
-| 27     | PA12     | TIM1_ETR, HRTIM_CHD2,LPUART1_RTS/LPUART1_DE,SPI2_SCK/I2S2_CK, UART4_TX,USART1_RTS/USART1_DE,SAI2_FS_B, FDCAN1_TX,OTG_FS_DP, LCD_R5 |      |
-| 29     | PE4      | TRACED1, SAI1_D2,DFSDM1_DATIN3, TIM15_CH1N,SPI4_NSS, SAI1_FS_A,SAI4_FS_A, SAI4_D2, FMC_A20,DCMI_D4, LCD_B0 |      |
-| 31     | PE5      | TRACED2, SAI1_CK2,DFSDM1_CKIN3, TIM15_CH1,SPI4_MISO, SAI1_SCK_A,SAI4_SCK_A, SAI4_CK2,FMC_A21, DCMI_D6, LCD_G0, | SPI4 |
-| 33     | PE6      | TRACED3, TIM1_BKIN2,SAI1_D1, TIM15_CH2,SPI4_MOSI, SAI1_SD_A,SAI4_SD_A, SAI4_D1,SAI2_MCLK_B,TIM1_BKIN2_COMP12,FMC_A22, DCMI_D7, LCD_G1, | SPI4 |
-| 35     | PH2      | LPTIM1_IN2,QUADSPI_BK2_IO0,SAI2_SCK_B, ETH_MII_CRS,FMC_SDCKE0, LCD_R0 |      |
-| 37     | PB1      | TIM1_CH3N, TIM3_CH4,TIM8_CH3N, DFSDM1_DATIN1,LCD_R6, OTG_HS_ULPI_D2,LCD_R6, OTG_HS_ULPI_D2 |      |
-| 39     | GND      |                                                              |      |
+| 引脚号 | 引脚名称 | 功能                                                         | 注释       |
+| ------ | -------- | ------------------------------------------------------------ | ---------- |
+| 1      | 3.3V     |                                                              |            |
+| 3      | PG11     | LPTIM1_IN2, HRTIM_EEV4,SPI1_SCK/I2S1_CK,SPDIFRX1_IN1, SDMMC2_D2,ETH_MII_TX_EN/ETH_RMII_TX_EN, DCMI_D3, LCD_B3 |            |
+| 5      | PG13     | TRACED0, LPTIM1_OUT,HRTIM_EEV10, SPI6_SCK,USART6_CTS/USART6_NSS,ETH_MII_TXD0/ETH_RMII_TXD0,FMC_A24, LCD_R0 |            |
+| 7      | PB9      | TIM17_CH1, TIM4_CH4,DFSDM1_DATIN7, I2C1_SDA,SPI2_NSS/I2S2_WS, I2C4_SDA,SDMMC1_CDIR, UART4_TX,FDCAN1_TX, SDMMC2_D5,I2C4_SMBA, SDMMC1_D5,DCMI_D7, LCD_B7 |            |
+| 9      | GND      |                                                              |            |
+| 11     | PC2_C    | CDSLEEP, DFSDM1_CKIN1,SPI2_MISO/I2S2_SDI,DFSDM1_CKOUT,OTG_HS_ULPI_DIR,ETH_MII_TXD2, FMC_SDNE0 |            |
+| 13     | PC3_C    | CSLEEP, DFSDM1_DATIN1,SPI2_MOSI/I2S2_SDO,OTG_HS_ULPI_NXT,ETH_MII_TX_CLK,FMC_SDCKE0 |            |
+| 15     | PA0_C    | TIM2_CH1/TIM2_ETR,TIM5_CH1, TIM8_ETR,TIM15_BKIN,USART2_CTS/USART2_NSS,UART4_TX, SDMMC2_CMD,SAI2_SD_B, ETH_MII_CRS |            |
+| 17     | 3.3V     |                                                              |            |
+| 19     | PC5      | SAI1_D3, DFSDM1_DATIN2,SPDIFRX1_IN4, SAI4_D3,ETH_MII_RXD1/ETH_RMII_RXD1, FMC_SDCKE0, COMP1_OUT |            |
+| 21     | PA7      | TIM1_CH1N, TIM3_CH2,TIM8_CH1N,SPI1_MOSI/I2S1_SDO,SPI6_MOSI, TIM14_CH1,ETH_MII_RX_DV/ETH_RMII_CRS_DV, FMC_SDNWE, EVENTOUT |            |
+| 23     | PA6      | TIM1_BKIN, TIM3_CH1,TIM8_BKIN,SPI1_MISO/I2S1_SDI,SPI6_MISO, TIM13_CH1,TIM8_BKIN_COMP12,MDIOS_MDC,TIM1_BKIN_COMP12,DCMI_PIXCLK, LCD_G2 |            |
+| 25     | GND      |                                                              |            |
+| 27     | PA12     | TIM1_ETR, HRTIM_CHD2,LPUART1_RTS/LPUART1_DE,SPI2_SCK/I2S2_CK, UART4_TX,USART1_RTS/USART1_DE,SAI2_FS_B, FDCAN1_TX,OTG_FS_DP, LCD_R5 |            |
+| 29     | PE4      | TRACED1, SAI1_D2,DFSDM1_DATIN3, TIM15_CH1N,SPI4_NSS, SAI1_FS_A,SAI4_FS_A, SAI4_D2, FMC_A20,DCMI_D4, LCD_B0 | LD3320_CS  |
+| 31     | PE5      | TRACED2, SAI1_CK2,DFSDM1_CKIN3, TIM15_CH1,SPI4_MISO, SAI1_SCK_A,SAI4_SCK_A, SAI4_CK2,FMC_A21, DCMI_D6, LCD_G0, | SPI4       |
+| 33     | PE6      | TRACED3, TIM1_BKIN2,SAI1_D1, TIM15_CH2,SPI4_MOSI, SAI1_SD_A,SAI4_SD_A, SAI4_D1,SAI2_MCLK_B,TIM1_BKIN2_COMP12,FMC_A22, DCMI_D7, LCD_G1, | SPI4       |
+| 35     | PH2      | LPTIM1_IN2,QUADSPI_BK2_IO0,SAI2_SCK_B, ETH_MII_CRS,FMC_SDCKE0, LCD_R0 | LD3320_IRQ |
+| 37     | PB1      | TIM1_CH3N, TIM3_CH4,TIM8_CH3N, DFSDM1_DATIN1,LCD_R6, OTG_HS_ULPI_D2,LCD_R6, OTG_HS_ULPI_D2 |            |
+| 39     | GND      |                                                              |            |
 
 #### 右列
 
@@ -112,12 +112,12 @@
 
     PE2，PE5，PE6  -->SPI4
 
-    -->LD3320_CS
+    PE4 -->LD3320_CS
 
-    -->LD3320_IRQ
+    PH2 -->LD3320_IRQ
 
-    -->LD3320_WR
+    GND -->LD3320_WR
 
-    -->LD3320_RST
+    GND -->LD3320_RST
 
     
