--- a/document/模块引脚说明.md
+++ b/document/模块引脚说明.md
@@ -31,28 +31,28 @@
 
 #### 右列
 
-| 引脚号 | 引脚名称 | 功能                                                         | 注释 |
-| ------ | -------- | ------------------------------------------------------------ | ---- |
-| 2      | 5V       | 电源供电引脚                                                 |      |
-| 4      | 5V       | 电源供电引脚                                                 |      |
-| 6      | GND      |                                                              |      |
-| 8      | PA9      | TIM1_CH2, HRTIM_CHC1,LPUART1_TX, I2C3_SMBA,SPI2_SCK/I2S2_CK,USART1_TX,FDCAN1_RXFD_MODE,DCMI_D0, LCD_R5 |      |
-| 10     | PA10     | TIM1_CH3, HRTIM_CHC2,LPUART1_RX, USART1_RX,FDCAN1_TXFD_MODE,OTG_FS_ID, MDIOS_MDIO,LCD_B4, DCMI_D1, LCD_B1 |      |
-| 12     | PI5      | TIM8_CH1, SAI2_SCK_A,FMC_NBL3, DCMI_VSYNC,LCD_B5             |      |
-| 14     | GND      |                                                              |      |
-| 16     | PH14     | TIM8_CH2N, UART4_RX,FDCAN1_RX, FMC_D22,DCMI_D4, LCD_G3       |      |
-| 18     | PC7      | TRGIO, HRTIM_CHA2,TIM3_CH2, TIM8_CH2,DFSDM1_DATIN3, I2S3_MCK,USART6_RX,SDMMC1_D123DIR, FMC_NE1,SDMMC2_D7, SWPMI_TX,SDMMC1_D7, DCMI_D1,LCD_G6 |      |
-| 20     | GND      |                                                              |      |
-| 22     | PC6      | HRTIM_CHA1, TIM3_CH1,TIM8_CH1, DFSDM1_CKIN3,I2S2_MCK, USART6_TX,SDMMC1_D0DIR, FMC_NWAIT,SDMMC2_D6, SDMMC1_D6,DCMI_D0, LCD_HSYNC |      |
-| 24     | PI0      | TIM5_CH4, SPI2_NSS/I2S2_WS,FDCAN1_RXFD_MODE,FMC_D24, DCMI_D13, LCD_G5 |      |
-| 26     | PG7      | HRTIM_CHE2, SAI1_MCLK_A,USART6_CK, FMC_INT,DCMI_D13, LCD_CLK |      |
-| 28     | PH8      | TIM5_ETR, I2C3_SDA, FMC_D16,DCMI_HSYNC, LCD_R2               |      |
-| 30     | GND      |                                                              |      |
-| 32     | PH10     | TIM5_CH1, I2C4_SMBA,FMC_D18, DCMI_D1, LCD_R4                 |      |
-| 34     | GND      |                                                              |      |
-| 36     | PB12     | TIM1_BKIN, I2C2_SMBA,SPI2_NSS/I2S2_WS,DFSDM1_DATIN1, USART3_CK,FDCAN2_RX, OTG_HS_ULPI_D5,ETH_MII_TXD0/ETH_RMII_TXD0,OTG_HS_ID,TIM1_BKIN_COMP12,UART5_RX |      |
-| 38     | PG10     | HRTIM_FLT5,SPI1_NSS/I2S1_WS, LCD_G3,SAI2_SD_B, FMC_NE3,DCMI_D2, LCD_B2 |      |
-| 40     | PI6      | TIM8_CH2, SAI2_SD_A,FMC_D28, DCMI_D6, LCD_B6                 |      |
+| 引脚号 | 引脚名称 | 功能                                                         | 注释    |
+| ------ | -------- | ------------------------------------------------------------ | ------- |
+| 2      | 5V       | 电源供电引脚                                                 |         |
+| 4      | 5V       | 电源供电引脚                                                 |         |
+| 6      | GND      |                                                              |         |
+| 8      | PA9      | TIM1_CH2, HRTIM_CHC1,LPUART1_TX, I2C3_SMBA,SPI2_SCK/I2S2_CK,USART1_TX,FDCAN1_RXFD_MODE,DCMI_D0, LCD_R5 |         |
+| 10     | PA10     | TIM1_CH3, HRTIM_CHC2,LPUART1_RX, USART1_RX,FDCAN1_TXFD_MODE,OTG_FS_ID, MDIOS_MDIO,LCD_B4, DCMI_D1, LCD_B1 |         |
+| 12     | PI5      | TIM8_CH1, SAI2_SCK_A,FMC_NBL3, DCMI_VSYNC,LCD_B5             |         |
+| 14     | GND      |                                                              |         |
+| 16     | PH14     | TIM8_CH2N, UART4_RX,FDCAN1_RX, FMC_D22,DCMI_D4, LCD_G3       |         |
+| 18     | PC7      | TRGIO, HRTIM_CHA2,TIM3_CH2, TIM8_CH2,DFSDM1_DATIN3, I2S3_MCK,USART6_RX,SDMMC1_D123DIR, FMC_NE1,SDMMC2_D7, SWPMI_TX,SDMMC1_D7, DCMI_D1,LCD_G6 |         |
+| 20     | GND      |                                                              |         |
+| 22     | PC6      | HRTIM_CHA1, TIM3_CH1,TIM8_CH1, DFSDM1_CKIN3,I2S2_MCK, USART6_TX,SDMMC1_D0DIR, FMC_NWAIT,SDMMC2_D6, SDMMC1_D6,DCMI_D0, LCD_HSYNC |         |
+| 24     | PI0      | TIM5_CH4, SPI2_NSS/I2S2_WS,FDCAN1_RXFD_MODE,FMC_D24, DCMI_D13, LCD_G5 |         |
+| 26     | PG7      | HRTIM_CHE2, SAI1_MCLK_A,USART6_CK, FMC_INT,DCMI_D13, LCD_CLK |         |
+| 28     | PH8      | TIM5_ETR, I2C3_SDA, FMC_D16,DCMI_HSYNC, LCD_R2               |         |
+| 30     | GND      |                                                              |         |
+| 32     | PH10     | TIM5_CH1, I2C4_SMBA,FMC_D18, DCMI_D1, LCD_R4                 | ir_send |
+| 34     | GND      |                                                              |         |
+| 36     | PB12     | TIM1_BKIN, I2C2_SMBA,SPI2_NSS/I2S2_WS,DFSDM1_DATIN1, USART3_CK,FDCAN2_RX, OTG_HS_ULPI_D5,ETH_MII_TXD0/ETH_RMII_TXD0,OTG_HS_ID,TIM1_BKIN_COMP12,UART5_RX |         |
+| 38     | PG10     | HRTIM_FLT5,SPI1_NSS/I2S1_WS, LCD_G3,SAI2_SD_B, FMC_NE3,DCMI_D2, LCD_B2 |         |
+| 40     | PI6      | TIM8_CH2, SAI2_SD_A,FMC_D28, DCMI_D6, LCD_B6                 |         |
 
 ### P2
 
@@ -78,33 +78,33 @@
 | 31     | PE5      | TRACED2, SAI1_CK2,DFSDM1_CKIN3, TIM15_CH1,SPI4_MISO, SAI1_SCK_A,SAI4_SCK_A, SAI4_CK2,FMC_A21, DCMI_D6, LCD_G0, | SPI4       |
 | 33     | PE6      | TRACED3, TIM1_BKIN2,SAI1_D1, TIM15_CH2,SPI4_MOSI, SAI1_SD_A,SAI4_SD_A, SAI4_D1,SAI2_MCLK_B,TIM1_BKIN2_COMP12,FMC_A22, DCMI_D7, LCD_G1, | SPI4       |
 | 35     | PH2      | LPTIM1_IN2,QUADSPI_BK2_IO0,SAI2_SCK_B, ETH_MII_CRS,FMC_SDCKE0, LCD_R0 | LD3320_IRQ |
-| 37     | PB1      | TIM1_CH3N, TIM3_CH4,TIM8_CH3N, DFSDM1_DATIN1,LCD_R6, OTG_HS_ULPI_D2,LCD_R6, OTG_HS_ULPI_D2 |            |
+| 37     | PB1      | TIM1_CH3N, TIM3_CH4,TIM8_CH3N, DFSDM1_DATIN1,LCD_R6, OTG_HS_ULPI_D2,LCD_R6, OTG_HS_ULPI_D2 | LD3320_RST |
 | 39     | GND      |                                                              |            |
 
 #### 右列
 
-| 引脚号 | 引脚名称 | 功能                                                         | 注释 |
-| ------ | -------- | ------------------------------------------------------------ | ---- |
-| 2      | 3V_BAT   |                                                              |      |
-| 4      | V_ref+   |                                                              |      |
-| 6      | GND      |                                                              |      |
-| 8      | PG14     | LCD_R6, OTG_HS_ULPI_D2,LCD_R6, OTG_HS_ULPI_D2,LCD_R6, OTG_HS_ULPI_D2,LCD_R6, OTG_HS_ULPI_D2,LCD_R6, OTG_HS_ULPI_D2 |      |
-| 10     | PB8      | LCD_R6, OTG_HS_ULPI_D2,LCD_R6, OTG_HS_ULPI_D2,LCD_R6, OTG_HS_ULPI_D2,LCD_R6, OTG_HS_ULPI_D2,SDMMC2_D4, ETH_MII_TXD3,SDMMC2_D4, ETH_MII_TXD3,LCD_B6 |      |
-| 12     | PC1      | TRACED0, SAI1_D1,DFSDM1_DATIN0,DFSDM1_CKIN4,SPI2_MOSI/I2S2_SDO,SAI1_SD_A, SAI4_SD_A,SDMMC2_CK, SAI4_D1,SDMMC2_CK, SAI4_D1 |      |
-| 14     | GND      |                                                              |      |
-| 16     | PA1_C    | TIM2_CH2, TIM5_CH2,LPTIM3_OUT, TIM15_CH1N,USART2_RTS/USART2_DE,UART4_RX, QUADSPI_BK1_IO3,SAI2_MCLK_B,ETH_MII_RX_CLK/ETH_RMII_REF_CLK, LCD_R2 |      |
-| 18     | PC4      | DFSDM1_CKIN2, I2S1_MCK,SPDIFRX1_IN3,SPDIFRX1_IN3,, FMC_SDNE0 |      |
-| 20     | GND      |                                                              |      |
-| 22     | PA1      | TIM2_CH2, TIM5_CH2,LPTIM3_OUT, TIM15_CH1N,USART2_RTS/USART2_DE,UART4_RX, QUADSPI_BK1_IO3,SAI2_MCLK_B,ETH_MII_RX_CLK/ETH_RMII_REF_CLK, LCD_R2 |      |
-| 24     | PA2      | TIM2_CH3, TIM5_CH3,LPTIM4_OUT, TIM15_CH1,USART2_TX, SAI2_SCK_B,ETH_MDIO, MDIOS_MDIO,LCD_R1 |      |
-| 26     | PA3      | TIM2_CH4, TIM5_CH4,LPTIM5_OUT, TIM15_CH2,USART2_RX, LCD_B2,OTG_HS_ULPI_D0,OTG_HS_ULPI_D0, |      |
-| 28     | PA11     | TIM1_CH4, HRTIM_CHD1,LPUART1_CTS,SPI2_NSS/I2S2_WS, UART4_RX,USART1_CTS/USART1_NSS,FDCAN1_RX, OTG_FS_DM,LCD_R4 |      |
-| 30     | GND      |                                                              |      |
-| 32     | PE2      | TRACECLK, SAI1_CK1,SPI4_SCK, SAI1_MCLK_A,SAI4_MCLK_A,QUADSPI_BK1_IO2, SAI4_CK1,ETH_MII_TXD3, FMC_A23 | SPI4 |
-| 34     | GND      |                                                              |      |
-| 36     | PH3      | QUADSPI_BK2_IO1,SAI2_MCLK_B, ETH_MII_COL,FMC_SDNE0, LCD_R1   |      |
-| 38     | PB0      | TIM1_CH2N, TIM3_CH3,TIM8_CH2N, DFSDM1_CKOUT,UART4_CTS, LCD_R3,OTG_HS_ULPI_D1,ETH_MII_RXD2, LCD_G1 |      |
-| 40     | PB2      | RTC_OUT, SAI1_D1,DFSDM1_CKIN1, SAI1_SD_A,SPI3_MOSI/I2S3_SDO,SAI4_SD_A, QUADSPI_CLK,SAI4_D1, EVENTOUT |      |
+| 引脚号 | 引脚名称 | 功能                                                         | 注释   |
+| ------ | -------- | ------------------------------------------------------------ | ------ |
+| 2      | 3V_BAT   |                                                              |        |
+| 4      | V_ref+   |                                                              |        |
+| 6      | GND      |                                                              |        |
+| 8      | PG14     | LCD_R6, OTG_HS_ULPI_D2,LCD_R6, OTG_HS_ULPI_D2,LCD_R6, OTG_HS_ULPI_D2,LCD_R6, OTG_HS_ULPI_D2,LCD_R6, OTG_HS_ULPI_D2 |        |
+| 10     | PB8      | LCD_R6, OTG_HS_ULPI_D2,LCD_R6, OTG_HS_ULPI_D2,LCD_R6, OTG_HS_ULPI_D2,LCD_R6, OTG_HS_ULPI_D2,SDMMC2_D4, ETH_MII_TXD3,SDMMC2_D4, ETH_MII_TXD3,LCD_B6 |        |
+| 12     | PC1      | TRACED0, SAI1_D1,DFSDM1_DATIN0,DFSDM1_CKIN4,SPI2_MOSI/I2S2_SDO,SAI1_SD_A, SAI4_SD_A,SDMMC2_CK, SAI4_D1,SDMMC2_CK, SAI4_D1 |        |
+| 14     | GND      |                                                              |        |
+| 16     | PA1_C    | TIM2_CH2, TIM5_CH2,LPTIM3_OUT, TIM15_CH1N,USART2_RTS/USART2_DE,UART4_RX, QUADSPI_BK1_IO3,SAI2_MCLK_B,ETH_MII_RX_CLK/ETH_RMII_REF_CLK, LCD_R2 |        |
+| 18     | PC4      | DFSDM1_CKIN2, I2S1_MCK,SPDIFRX1_IN3,SPDIFRX1_IN3,, FMC_SDNE0 |        |
+| 20     | GND      |                                                              |        |
+| 22     | PA1      | TIM2_CH2, TIM5_CH2,LPTIM3_OUT, TIM15_CH1N,USART2_RTS/USART2_DE,UART4_RX, QUADSPI_BK1_IO3,SAI2_MCLK_B,ETH_MII_RX_CLK/ETH_RMII_REF_CLK, LCD_R2 |        |
+| 24     | PA2      | TIM2_CH3, TIM5_CH3,LPTIM4_OUT, TIM15_CH1,USART2_TX, SAI2_SCK_B,ETH_MDIO, MDIOS_MDIO,LCD_R1 |        |
+| 26     | PA3      | TIM2_CH4, TIM5_CH4,LPTIM5_OUT, TIM15_CH2,USART2_RX, LCD_B2,OTG_HS_ULPI_D0,OTG_HS_ULPI_D0, |        |
+| 28     | PA11     | TIM1_CH4, HRTIM_CHD1,LPUART1_CTS,SPI2_NSS/I2S2_WS, UART4_RX,USART1_CTS/USART1_NSS,FDCAN1_RX, OTG_FS_DM,LCD_R4 |        |
+| 30     | GND      |                                                              |        |
+| 32     | PE2      | TRACECLK, SAI1_CK1,SPI4_SCK, SAI1_MCLK_A,SAI4_MCLK_A,QUADSPI_BK1_IO2, SAI4_CK1,ETH_MII_TXD3, FMC_A23 | SPI4   |
+| 34     | GND      |                                                              |        |
+| 36     | PH3      | QUADSPI_BK2_IO1,SAI2_MCLK_B, ETH_MII_COL,FMC_SDNE0, LCD_R1   |        |
+| 38     | PB0      | TIM1_CH2N, TIM3_CH3,TIM8_CH2N, DFSDM1_CKOUT,UART4_CTS, LCD_R3,OTG_HS_ULPI_D1,ETH_MII_RXD2, LCD_G1 | ir_rev |
+| 40     | PB2      | RTC_OUT, SAI1_D1,DFSDM1_CKIN1, SAI1_SD_A,SPI3_MOSI/I2S3_SDO,SAI4_SD_A, QUADSPI_CLK,SAI4_D1, EVENTOUT |        |
 
 ## 已用引脚
 
@@ -118,6 +118,12 @@
 
     GND -->LD3320_WR
 
-    GND -->LD3320_RST
+    PB1 -->LD3320_RST
 
     
+
+-   红外
+
+    PB0 -->IR接收
+
+    PH10 -->IR发送
